fixed template tag rules but still have design alignment issues to solve

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -468,7 +468,7 @@ ul, li {
 }
 /* Icon Topic */
 .divMoreActions {
-  text-align: right; height: 37px; float: right;
+  text-align: right; height: 30px; float: right;
 }
 
 .divMoreActions > .btn-group {
@@ -476,12 +476,10 @@ ul, li {
 }
 
 .moreAccordion {
-  height: 37px;
+  height: 30px;
 }
 /*.divMoreActions div button {padding-left: 10px; padding-right: 10px; padding-bottom: 10px; margin-bottom: 4px; height: 31px;}*/
-.divMoreActions , .moreAccordion{
-  padding-top: 3px;
-}
+
 .moreAccordion button{margin-bottom: 0px; margin-top: 8px;}
 .titleTopic {padding-top: 10px; padding-bottom: 10px;}
 .titleTopic a h4, .titleTopic h4{color: white;}
